<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity">

        <ImageView
            android:id="@+id/imgVirus"
            android:layout_width="411dp"
            android:layout_height="165dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coronavirus_hero" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCambio"
            android:layout_width="61dp"
            android:layout_height="55dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="44dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/virus_imgbtn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="137dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus" />

        <TextView
            android:id="@+id/txtNombree"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txtEdadd"
            android:layout_width="49dp"
            android:layout_height="29dp"
            android:layout_marginTop="31dp"
            android:text="@string/edad"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtEdad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombree" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="249dp"
            android:layout_height="40dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="251dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="391dp"
            android:layout_height="381dp"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTextoInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0C0C0C" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnVirus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="484dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnvirus"
            app:layout_constraintEnd_toStartOf="@+id/btnSintomas"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus" />

        <Button
            android:id="@+id/btnSintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="484dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnsintomas"
            app:layout_constraintEnd_toStartOf="@+id/btnIndicaciones"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus" />

        <Button
            android:id="@+id/btnIndicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="484dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btnIndicaciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVirus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>